[package]
name = "alphaTracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.1.0"
tokio = {version = "1.15.0" , features = ["full"]}
serde_derive = {version = "1.0.133"}
bson = "2.1.0"
futures = "0.3.9"
serde = "1.0.133"
web3 = { version = "0.17.0", default-features = false, features = ["http-rustls-tls"] }
hex = "0.4.3"
hex-literal = "0.3.4"
